--- a/templates/flover/php/blocks/modal.phtml
+++ b/templates/flover/php/blocks/modal.phtml
@@ -1,6 +1,9 @@
 <?php /** @var umiTemplaterPHP $this */ ?>
 <?php /** @var array $variables */ ?>
+<?php echo $this->render(null, 'blocks/modal/cart_added');?>
+
 <?php echo $this->render(null, 'blocks/modal/callback');?>
+
 <?php echo $this->render(null, 'blocks/modal/bouquet');?>
 
 <?php echo $this->render(null, 'blocks/modal/fast_order');?>
