--- a/templates/flover/php/modules/emarket/cart.phtml
+++ b/templates/flover/php/modules/emarket/cart.phtml
@@ -11,146 +11,11 @@ $cart = $this->getCommonVar('cart');?>
 <section class="basket">
 <?php if(is_array($cart) && isset($cart['items']) && count($cart['items']['nodes:item'])):?>
     <form action="/emarket/checkout/" method="POST">
-        <div class="row">
-            <div class="small-12 columns">
-                <table>
-                    <?php foreach($cart['items']['nodes:item'] as $item):
-                        $itemId = $item['attribute:id'];
-                        $page = $item['page'];
-                        /* @var umiHierarchyElement $page*/
-                        $image = $page->getValue(CATALOG_OBJECT_FIELD_MAIN_IMAGE);
-                        $isBouquet = (getArrayKey($item, 'is_bouquet') == 1);
-                        $card = getArrayKey($item, 'card');
-                        $related = $this->macros('catalog', 'getCatalogObjectRelated', array($page->getId()));
-                        ?>
-                        <tr class="item" data-cart="item" data-id="<?php echo $itemId;?>">
-                            <td class="emlt-2">
-                                <?php if($image instanceof umiImageFile && !$image->getIsBroken()):?>
-                                    <a class="th radius modal" href="<?php echo $image->getFilePath(true);?>">
-                                        <img src="<?php echo $this->makeThumbnailFull($image->getFilePath(), 200, 200);?>" />
-                                    </a>
-                                <?php endif;?>
-                            </td>
+        <?php echo $this->render(array(
+            'cart' => $cart
+        ), 'modules/emarket/cart/items');?>
 
-                            <td class="emlt-3">
-                                <span class="h4"><?php echo $page->getName();?></span>
-                                <?php if($isBouquet):
-                                    $paperColor = $this->macros('catalog', 'getCatalogObjectPaperColor', array($item['page']->getId()));
-                                    if(is_array($paperColor)):
-                                        $itemOption = $this->getArrayItem($item['options']['nodes:option'], array('attribute:field-name' => 'paper_color'));
-                                        $current = is_array($itemOption) ? $itemOption['attribute:id'] : false;
-                                        ?>
-                                    <div class="row">
-                                        <div class="small-6 columns">
-                                            <select name="paper_color[<?php echo $itemId;?>]" id="paper_color_<?php echo $itemId;?>">
-                                                <?php foreach($paperColor['items']['nodes:item'] as $paperColorItem):?>
-                                                    <option value="<?php echo $paperColorItem['attribute:id'];?>"<?php if($paperColorItem['attribute:id'] == $current):?> selected=""<?php endif;?>><?php echo $paperColorItem['node:text'];?></option>
-                                                <?php endforeach;?>
-                                            </select>
-                                        </div>
-                                        <div class="small-6 columns">
-                                            <label class="inline" for="paper_color_<?php echo $itemId;?>">цвет бумаги</label>
-                                        </div>
-                                    </div>
-                                <?php
-                                    endif;
-                                endif;?>
-                            </td>
-
-                            <td class="emlt-3 decrease">
-                                <div class="row">
-                                    <div class="small-6 columns">
-                                        <div class="row collapse">
-                                            <div class="small-3 columns">
-                                                <a href="#" class="button secondary prefix"><i class="material-icons">keyboard_arrow_left</i></a>
-                                            </div>
-                                            <div class="small-6 columns">
-                                                <input type="number" name="amount[<?php echo $itemId?>]" value="<?php echo $item['amount'];?>" min="1" id="num_item_1">
-                                            </div>
-                                            <div class="small-3 columns">
-                                                <a href="#" class="button secondary postfix"><i class="material-icons">keyboard_arrow_right</i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="small-6 columns">
-                                        <label class="inline" for="num_item_1">× <?php echo $item['price']['actual'];?> р.</label>
-                                    </div>
-                                </div>
-                            </td>
-
-                            <td class="emlt-1 decrease">
-                                <a class="del" href="/emarket/basket/remove/item/<?php echo $itemId;?>/" data-cart="remove" data-id="<?php echo $itemId;?>"><i class="material-icons">delete</i></a>
-                            </td>
-
-                            <td class="emlt-3<?php if(is_array($card)):?> add-card<?php endif;?>">
-                                <?php if(is_array($card)):?>
-                                    <input type="checkbox" name="card[<?php echo $itemId;?>]" id="card_<?php echo $itemId;?>" value="1"<?php if(getArrayKey($card, 'attribute:status') == 'active'):?> checked<?php endif;?> /><label for="card_<?php echo $itemId;?>">Добавить открытку — 150 р.</label>
-                                    <textarea rows="5" name="message[<?php echo $itemId;?>]" placeholder="Введите текст открытки"><?php echo trim(getArrayKey($card, 'message'));?></textarea>
-                                <?php endif;?>
-                            </td>
-                        </tr>
-                        <?php if(is_array($related)):?>
-                            <tr class="related" data-cart="item-related" data-id="<?php echo $itemId;?>">
-                                <td colspan="5">
-                                    <span class="h5">Получателю может понравиться</span>
-                                    <ul class="small-block-grid-6 objects">
-                                        <?php foreach($related['items']['nodes:item'] as $relatedItem):
-                                            $relatedItemId = $relatedItem['attribute:id'];
-                                            $price = $this->macros('emarket', 'price', array($relatedItemId, 'notemplate', false));?>
-                                            <li>
-                                                <div class="item">
-                                                    <div class="top">
-                                                        <figure>
-                                                            <img src="<?php echo $this->makeThumbnailFull($relatedItem['image']->getFilePath(), 280, 280);?>" />
-                                                            <figcaption>
-                                                                <?php if($relatedItem['category']):?>
-                                                                    <small><?php echo $relatedItem['category'];?></small>
-                                                                <?php endif;?>
-                                                                <strong><?php echo $relatedItem['node:text'];?></strong>
-                                                                <?php if(is_array($price)):?>
-                                                                    <?php if(isset($price['price']['original'])):?>
-                                                                        <span class="price sale"><span class="old" umi:element-id="<?php echo $id;?>" umi:field-name="price"><?php echo $price['price']['original']?> р.</span> <?php echo $price['price']['actual'];?> р.</span>
-                                                                    <?php else:?>
-                                                                        <span class="price" umi:element-id="<?php echo $id;?>" umi:field-name="price"><?php echo $price['price']['actual'];?> р.</span>
-                                                                    <?php endif;?>
-                                                                <?php endif;?>
-                                                            </figcaption>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="bottom">
-                                                        <ul class="buttons">
-                                                            <li><a href="/emarket/basket/put/element/<?php echo $relatedItemId;?>/" class="button radius expand" data-cart="add" data-id="<?php echo $relatedItemId;?>"><i class="material-icons">add_shopping_cart</i> Добавить</a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        <?php endforeach;?>
-                                    </ul>
-                                </td>
-                            </tr>
-                        <?php endif;?>
-                    <?php endforeach;?>
-
-                    <!-- Итог -->
-                    <tr class="summary">
-                        <!-- Итого -->
-                        <td colspan="3" class="text-right">
-                            Итого
-                        </td>
-                        <!-- /Итого -->
-
-                        <!-- Цена -->
-                        <td colspan="2">
-                            <div class="final price" data-cart="total-price" data-suffix=" р."><?php echo $cart['summary']['price']['actual'];?> р.</div>
-                        </td>
-                        <!-- /Цена -->
-                    </tr>
-                    <!-- /Итог -->
-                </table>
-
-                <?php echo $this->render(null, 'modules/emarket/cart/checkout');?>
-            </div>
-        </div>
+        <?php echo $this->render(null, 'modules/emarket/cart/checkout');?>
     </form>
 <?php else:?>
     <div class="row">
